[gd_scene load_steps=11 format=3 uid="uid://5h514nvd0q4h"]

[ext_resource type="Script" path="res://scripts/en_policai.gd" id="1_5n4d2"]
[ext_resource type="Texture2D" uid="uid://bheeiu03eey3q" path="res://assets/sprites/333.png" id="2_y5sxl"]

[sub_resource type="CircleShape2D" id="CircleShape2D_5148e"]
radius = 15.0083

[sub_resource type="AtlasTexture" id="AtlasTexture_7i725"]
atlas = ExtResource("2_y5sxl")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2s8f1"]
atlas = ExtResource("2_y5sxl")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kcrma"]
atlas = ExtResource("2_y5sxl")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yoke8"]
atlas = ExtResource("2_y5sxl")
region = Rect2(96, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_pwcru"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7i725")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2s8f1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kcrma")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yoke8")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_mmc1i"]
radius = 16.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qqion"]
size = Vector2(14, 2.5625)

[node name="Policai" type="CharacterBody2D" groups=["hostile_NPC"]]
collision_layer = 4
floor_stop_on_slope = false
script = ExtResource("1_5n4d2")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 6.5)
shape = SubResource("CircleShape2D_5148e")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, 6)
sprite_frames = SubResource("SpriteFrames_pwcru")
autoplay = "default"
flip_h = true

[node name="PlayerKiller" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerKiller"]
position = Vector2(0, 6)
shape = SubResource("CircleShape2D_mmc1i")

[node name="StompDetector" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="StompDetector"]
position = Vector2(0, -11.2813)
shape = SubResource("RectangleShape2D_qqion")

[connection signal="body_entered" from="PlayerKiller" to="PlayerKiller" method="_on_body_entered"]
